# I2P-2-Final-Project

./: CMakeLists.txt  Makefile  Readme.md  main.cpp
Bullet/: Bullet.cpp  Bullet.hpp  FireBullet.cpp  FireBullet.hpp  Fireball.cpp  Fireball.hpp  LaserBullet.cpp  LaserBullet.hpp  TankBullet.cpp  TankBullet.hpp
Enemy/: AttackEnemy.cpp  AttackEnemy.hpp  BikeEnemy.cpp  BikeEnemy.hpp  CarEnemy.cpp  CarEnemy.hpp  CuteEnemy.cpp  CuteEnemy.hpp  Enemy.cpp  Enemy.hpp  GangEnemy.cpp  GangEnemy.hpp  GrandmaEnemy.cpp  GrandmaEnemy.hpp  HoleEnemy.cpp  HoleEnemy.hpp  Sign.cpp  Sign.hpp  SoldierEnemy.cpp  SoldierEnemy.hpp  Super.cpp  Super.hpp  TankEnemy.cpp  TankEnemy.hpp  TreeEnemy.cpp  TreeEnemy.hpp  TruckEnemy.cpp  TruckEnemy.hpp  coin.cpp  coin.hpp  gun.cpp  gun.hpp
Engine/: AudioHelper.cpp  AudioHelper.hpp  GameEngine.cpp  GameEngine.hpp  Group.cpp  Group.hpp  IObject.cpp  Sprite.cpp  Sprite.hpp
Player/: Gang.cpp  Gang.hpp  Player.cpp  Player.hpp  coin.cpp  coin.hpp  gun.cpp  gun.hpp
Resource/: account.txt  coin1.txt  enemy1.txt  enemy2.txt  enemy3.txt  map1.txt  map2.txt  scoreboard1.txt  scoreboard2.txt  scoreboard3.txt
Scene/: LoseScene.cpp  LoseScene.hpp  PlayScene.cpp  PlayScene.hpp  Plot1Scene.cpp  Plot1Scene.hpp  Plot2Scene.cpp  Plot2Scene.hpp  Plot3Scene.cpp  Plot3Scene.hpp  ScoreboardScene.cpp  ScoreboardScene.hpp  SettingsScene.cpp  StageSelectScene.cpp  StageSelectScene.hpp  StartScene.cpp  StartScene.hpp  WinScene.cpp  WinScene.hpp  pausefunc.cpp  plotScene.cpp  plotScene.hpp
Turret/: FireTurret.cpp  FireTurret.hpp  LaserTurret.cpp  LaserTurret.hpp  MachineGunTurret.cpp  MachineGunTurret.hpp  Turret.cpp  Turret.hpp  TurretButton.cpp  TurretButton.hpp
UI/Animation/: DirtyEffect.cpp  Plane.cpp
UI/Component/: Slider.cpp  backgroundImage.cpp  backgroundImage.hpp  skillImage.cpp  skillImage.hpp  timer.cpp  timer.hpp
